--- a/app/src/main/res/layout/activity_phrases.xml
+++ b/app/src/main/res/layout/activity_phrases.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.miwok.PhrasesActivity">
+    tools:context="com.example.android.learnchinese.PhrasesActivity">
 
 </android.support.constraint.ConstraintLayout>
