--- a/app/src/main/res/layout/words_list.xml
+++ b/app/src/main/res/layout/words_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/words_list"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -8,5 +7,4 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.learnchinese.NumbersActivity"/>
+    android:paddingTop="@dimen/activity_vertical_margin"/>
