--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,11 +23,11 @@
     <!-- Style for a category of vocabulary words -->
     <style name="CategoryStyle">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/list_item_height</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_vertical</item>
-        <item name="android:padding">16dp</item>
+        <item name="android:padding">24dp</item>
         <item name="android:textAppearance">?android:textAppearanceMedium</item>
         <item name="android:background">@color/light_white</item>
-        <item name="android:layout_marginBottom">3px</item>
+        <item name="android:layout_marginBottom">4px</item>
     </style>
 </resources>
